[package]
name = "oauth_tutorial"
version = "0.1.0"
authors = ["hppRC <hpp.ricecake@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.99"
reqwest = "0.9.20"
chrono = "0.4.9"
percent-encoding = "2.1.0"
hmac-sha1 = "0.1.3"
base64 = "0.10.1"
